unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/SPARTADMS__DMS_App_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>DMS App Settings</description>
    <label>DMS App Setting</label>
</CustomObject>