unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__App_Logo__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__App_Logo__c</fullName>
        <description>App Logo</description>
        <inlineHelpText>App Logo</inlineHelpText>
        <label>App Logo</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>