unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__BOX_Admin_Group_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__BOX_Admin_Group_Id__c</fullName>
        <description>BOX Admin Group Id</description>
        <inlineHelpText>BOX Admin Group Id</inlineHelpText>
        <label>BOX Admin Group Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>