unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__BOX_All_User_Group_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__BOX_All_User_Group_Id__c</fullName>
        <description>BOX All User Group Id</description>
        <inlineHelpText>BOX All User Group Id</inlineHelpText>
        <label>BOX All User Group Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>