unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__BOX_Previewer_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__BOX_Previewer_Id__c</fullName>
        <description>BOX Previewer Id</description>
        <inlineHelpText>BOX Previewer Id</inlineHelpText>
        <label>BOX Previewer Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>