unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__BOX_Root_Folder_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__BOX_Root_Folder_Id__c</fullName>
        <description>BOX Root Folder Id</description>
        <inlineHelpText>BOX Root Folder Id</inlineHelpText>
        <label>BOX Root Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>