unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Can_DMS_Admin_Review_Required__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Can_DMS_Admin_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is DMS Admin Approval Required</description>
        <inlineHelpText>Is DMS Admin Approval Required</inlineHelpText>
        <label>Is DMS Admin Approval Required</label>
        <type>Checkbox</type>
    </CustomField>