unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__DMS_Consumer_Key__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__DMS_Consumer_Key__c</fullName>
        <description>DMS Consumer Key</description>
        <inlineHelpText>DMS Consumer Key</inlineHelpText>
        <label>DMS Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>