unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__DMS_Consumer_Secret__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__DMS_Consumer_Secret__c</fullName>
        <description>DMS Consumer Secret</description>
        <inlineHelpText>DMS Consumer Secret</inlineHelpText>
        <label>DMS Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>