unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Document_Auto_Effective__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Auto_Effective__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Document Auto Effective (In days)</description>
        <inlineHelpText>Document Auto Effective (In days)</inlineHelpText>
        <label>Document Auto Effective (In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>