unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Enable_Audit_Trail_Report__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Enable_Audit_Trail_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Audit Trail Report</description>
        <inlineHelpText>Enable Audit Trail Report</inlineHelpText>
        <label>Enable Audit Trail Report</label>
        <type>Checkbox</type>
    </CustomField>