unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Enable_Document_Type_Auto_Numbering__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Enable_Document_Type_Auto_Numbering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Document Auto Numbering</description>
        <inlineHelpText>This field is no longer in use.</inlineHelpText>
        <label>Enable Document Auto Numbering</label>
        <type>Checkbox</type>
    </CustomField>