unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Enable_Review_Justification__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Enable_Review_Justification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True - Enable Justification
False- Disable Justification</description>
        <inlineHelpText>Check- Enable Justification
Uncheck- Disable Justification</inlineHelpText>
        <label>Enable Justification</label>
        <type>Checkbox</type>
    </CustomField>