unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Salesforce_Base_Url__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Salesforce_Base_Url__c</fullName>
        <description>Salesforce Base Url</description>
        <inlineHelpText>Salesforce Base Url</inlineHelpText>
        <label>Salesforce Base Url</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>