unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Salesforce_Login_Url__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Salesforce_Login_Url__c</fullName>
        <description>Salesforce Login Url</description>
        <inlineHelpText>Salesforce Login Url</inlineHelpText>
        <label>Salesforce Login Url</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>