unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Send_Email__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to Send Email</description>
        <inlineHelpText>Check to Send Email</inlineHelpText>
        <label>Send Email</label>
        <type>Checkbox</type>
    </CustomField>