unpackaged/main/default/objects/SPARTADMS__DMS_App_Setting__c/fields/SPARTADMS__Total_Delete__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Total_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Total Delete</description>
        <inlineHelpText>Total Delete</inlineHelpText>
        <label>Total Delete</label>
        <type>Checkbox</type>
    </CustomField>